<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionActivity"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/connexion"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_an_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:width="320dp"
        android:height="55dp"
        android:backgroundTint="#FFFFFF"
        android:minWidth="260dp"
        android:minHeight="30dp"
        android:padding="10dp"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0001FC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="80" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="75dp"
        android:width="320dp"
        android:height="55dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="screen"
        android:minWidth="260dp"
        android:minHeight="30dp"
        android:padding="10dp"
        android:text="@string/connect_with_google"
        android:textAlignment="center"
        android:textColor="#555555"
        android:textSize="18sp"
        app:icon="@drawable/google_icon"
        app:iconGravity="start"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_an_account_button"
        app:layout_constraintWidth_percent="80"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="75dp"
        android:width="320dp"
        android:height="55dp"
        android:backgroundTint="#415A93"
        android:backgroundTintMode="screen"
        android:minWidth="260dp"
        android:minHeight="30dp"
        android:padding="10dp"
        android:text="@string/connect_with_facebook"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:icon="@drawable/facebook_icon"
        app:iconGravity="start"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_button" />


    <Button
        android:id="@+id/button2"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@color/colorBackground"
        android:enabled="false"
        android:text="@string/skip_for_now"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        android:text="@string/login_string"
        android:textColor="#FBDF00"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_button" />

</androidx.constraintlayout.widget.ConstraintLayout>